changes in styles and index

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Convertidor Markdown a HTML &lt;img&gt;</h1>
+  <div class="container">
+    <h1>Convertidor Markdown a HTML &lt;img&gt;</h1>
 
-  <textarea id="markdown" placeholder="Pega tu markdown aquí..."></textarea>
-  
-  <button id="convertBtn">Convertir</button>
-  <button id="copyBtn">Copiar al portapapeles</button>
+    <textarea id="markdown" placeholder="Pega tu markdown aquí..."></textarea>
+    
+    <div class="buttons">
+      <button id="convertBtn">Convertir</button>
+      <button id="copyBtn">Copiar al portapapeles</button>
+    </div>
 
-  <h2>Resultado:</h2>
-  <pre id="output"></pre>
+    <h2>Resultado:</h2>
+    <pre id="output"></pre>
+  </div>
 
   <script src="script.js"></script>
 </body>
